1. plugins close method 2. split git-clone plugin

--- a/modules/server/pom.xml
+++ b/modules/server/pom.xml
@@ -1,209 +1,209 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<parent>
-		<artifactId>jpom-parent</artifactId>
-		<groupId>io.jpom</groupId>
-		<version>2.8.12</version>
-		<relativePath>../../pom.xml</relativePath>
-	</parent>
-	<modelVersion>4.0.0</modelVersion>
-	<name>Jpom 服务端</name>
-	<artifactId>server</artifactId>
-	<version>2.8.12</version>
-	<properties>
-		<start-class>io.jpom.JpomServerApplication</start-class>
-	</properties>
-	<dependencies>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>jpom-parent</artifactId>
+        <groupId>io.jpom</groupId>
+        <version>2.8.12</version>
+        <relativePath>../../pom.xml</relativePath>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <name>Jpom 服务端</name>
+    <artifactId>server</artifactId>
+    <version>2.8.12</version>
+    <properties>
+        <start-class>io.jpom.JpomServerApplication</start-class>
+    </properties>
+    <dependencies>
 
-		<dependency>
-			<groupId>io.jpom</groupId>
-			<artifactId>common</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>io.jpom</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>io.jpom.plugins</groupId>
-			<artifactId>webhook</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>io.jpom.plugins</groupId>
+            <artifactId>webhook</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>io.jpom.plugins</groupId>
-			<artifactId>auto-charset-jchardet</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>io.jpom.plugins</groupId>
+            <artifactId>auto-charset-jchardet</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
-		<!--websocket作为客户端-->
-		<dependency>
-			<groupId>org.java-websocket</groupId>
-			<artifactId>Java-WebSocket</artifactId>
-			<version>1.5.2</version>
-		</dependency>
+        <!--websocket作为客户端-->
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.5.2</version>
+        </dependency>
 
-		<!--   数据库-->
-		<dependency>
-			<groupId>io.jpom.plugins</groupId>
-			<artifactId>db-h2</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+        <!--   数据库-->
+        <dependency>
+            <groupId>io.jpom.plugins</groupId>
+            <artifactId>db-h2</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.eclipse.jgit</groupId>
-			<artifactId>org.eclipse.jgit.ssh.jsch</artifactId>
-			<version>5.13.0.202109080827-r</version>
-		</dependency>
+        <dependency>
+            <groupId>io.jpom.plugins</groupId>
+            <artifactId>git-clone</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>com.jcraft</groupId>
-			<artifactId>jsch</artifactId>
-			<version>0.1.55</version>
-		</dependency>
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.55</version>
+        </dependency>
 
-		<dependency>
-			<groupId>io.jpom.plugins</groupId>
-			<artifactId>svn-clone</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>io.jpom.plugins</groupId>
+            <artifactId>svn-clone</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>io.jpom.plugins</groupId>
-			<artifactId>docker-cli</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>io.jpom.plugins</groupId>
+            <artifactId>docker-cli</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
-		<!--邮件-->
-		<dependency>
-			<groupId>io.jpom.plugins</groupId>
-			<artifactId>email</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+        <!--邮件-->
+        <dependency>
+            <groupId>io.jpom.plugins</groupId>
+            <artifactId>email</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-			<version>2.4.0-b180830.0359</version>
-		</dependency>
-		<!--Spring Junit Test-->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.1.1</version>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>${start-class}</mainClass>
-							<!-- 是否指定项目classpath下的依赖 -->
-							<addClasspath>true</addClasspath>
-							<!-- 指定依赖的时候声明前缀 -->
-							<classpathPrefix>./</classpathPrefix>
-						</manifest>
-						<manifestEntries>
-							<!-- 项目版本号 -->
-							<Jpom-Project-Version>${project.version}</Jpom-Project-Version>
-							<!-- 打包时间 -->
-							<Jpom-Timestamp>${maven.build.timestamp}</Jpom-Timestamp>
-							<Jpom-Type>${project.artifactId}</Jpom-Type>
-							<Implementation-URL>https://gitee.com/dromara/Jpom</Implementation-URL>
-							<Jpom-Min-Version>${jpom-min-version}</Jpom-Min-Version>
-						</manifestEntries>
-					</archive>
-				</configuration>
-			</plugin>
-		</plugins>
-		<resources>
-			<!--版权文件,更新日志-->
-			<resource>
-				<filtering>false</filtering>
-				<directory>../../</directory>
-				<includes>
-					<include>CHANGELOG.md</include>
-					<include>LICENSE</include>
-				</includes>
-			</resource>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>false</filtering>
-			</resource>
-		</resources>
-	</build>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.4.0-b180830.0359</version>
+        </dependency>
+        <!--Spring Junit Test-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.1</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>${start-class}</mainClass>
+                            <!-- 是否指定项目classpath下的依赖 -->
+                            <addClasspath>true</addClasspath>
+                            <!-- 指定依赖的时候声明前缀 -->
+                            <classpathPrefix>./</classpathPrefix>
+                        </manifest>
+                        <manifestEntries>
+                            <!-- 项目版本号 -->
+                            <Jpom-Project-Version>${project.version}</Jpom-Project-Version>
+                            <!-- 打包时间 -->
+                            <Jpom-Timestamp>${maven.build.timestamp}</Jpom-Timestamp>
+                            <Jpom-Type>${project.artifactId}</Jpom-Type>
+                            <Implementation-URL>https://gitee.com/dromara/Jpom</Implementation-URL>
+                            <Jpom-Min-Version>${jpom-min-version}</Jpom-Min-Version>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+        <resources>
+            <!--版权文件,更新日志-->
+            <resource>
+                <filtering>false</filtering>
+                <directory>../../</directory>
+                <includes>
+                    <include>CHANGELOG.md</include>
+                    <include>LICENSE</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+    </build>
 
-	<profiles>
-		<profile>
-			<id>server-default-profile</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-maven-plugin</artifactId>
-						<configuration>
-							<fork>true</fork>
-							<mainClass>${start-class}</mainClass>
-							<jvmArguments>-Dfile.encoding=UTF-8</jvmArguments>
-							<!--	<excludeGroupIds>io.jpom.plugins</excludeGroupIds>-->
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>repackage</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-assembly-plugin</artifactId>
-						<version>3.3.0</version>
-						<configuration>
-							<encoding>${project.build.sourceEncoding}</encoding>
-							<descriptors>
-								<descriptor>script/release.xml</descriptor>
-							</descriptors>
-							<outputDirectory>target</outputDirectory>
-						</configuration>
-						<executions>
-							<execution>
-								<id>make-assembly</id>
-								<phase>package</phase>
-								<goals>
-									<goal>single</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<!--  安装插件引人-->
-		<profile>
-			<id>install-plugin-profile</id>
-		</profile>
-		<profile>
-			<id>release-plugin-profile</id>
-		</profile>
+    <profiles>
+        <profile>
+            <id>server-default-profile</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <fork>true</fork>
+                            <mainClass>${start-class}</mainClass>
+                            <jvmArguments>-Dfile.encoding=UTF-8</jvmArguments>
+                            <!--	<excludeGroupIds>io.jpom.plugins</excludeGroupIds>-->
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>repackage</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <version>3.3.0</version>
+                        <configuration>
+                            <encoding>${project.build.sourceEncoding}</encoding>
+                            <descriptors>
+                                <descriptor>script/release.xml</descriptor>
+                            </descriptors>
+                            <outputDirectory>target</outputDirectory>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>make-assembly</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <!--  安装插件引人-->
+        <profile>
+            <id>install-plugin-profile</id>
+        </profile>
+        <profile>
+            <id>release-plugin-profile</id>
+        </profile>
 
-		<!--  插件开发-->
-		<profile>
-			<id>develop-plugin-profile</id>
-			<dependencies>
-				<dependency>
-					<groupId>io.jpom.jpom-plugin</groupId>
-					<artifactId>netty</artifactId>
-					<version>LATEST</version>
-				</dependency>
-			</dependencies>
-		</profile>
-	</profiles>
+        <!--  插件开发-->
+        <profile>
+            <id>develop-plugin-profile</id>
+            <dependencies>
+                <dependency>
+                    <groupId>io.jpom.jpom-plugin</groupId>
+                    <artifactId>netty</artifactId>
+                    <version>LATEST</version>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 </project>
