--- a/modules/sub-plugin/git-clone/pom.xml
+++ b/modules/sub-plugin/git-clone/pom.xml
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.jpom.plugins</groupId>
     <artifactId>git-clone</artifactId>
-
+    <name>plugin-git-clone</name>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
