--- a/modules/agent/pom.xml
+++ b/modules/agent/pom.xml
@@ -1,150 +1,179 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<parent>
-		<artifactId>jpom-parent</artifactId>
-		<groupId>io.jpom</groupId>
-		<version>2.8.13</version>
-		<relativePath>../../pom.xml</relativePath>
-	</parent>
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>agent</artifactId>
-	<version>2.8.13</version>
-	<name>Jpom 插件端</name>
-	<properties>
-		<start-class>io.jpom.JpomAgentApplication</start-class>
-	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>io.jpom</groupId>
-			<artifactId>common</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<!--nginx-->
-		<dependency>
-			<groupId>com.github.odiszapc</groupId>
-			<artifactId>nginxparser</artifactId>
-			<version>0.9.6</version>
-		</dependency>
-		<!--  证书解密-->
-		<dependency>
-			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcprov-jdk15on</artifactId>
-			<version>1.69</version>
-		</dependency>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>jpom-parent</artifactId>
+        <groupId>io.jpom</groupId>
+        <version>2.8.13</version>
+        <relativePath>../../pom.xml</relativePath>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>agent</artifactId>
+    <version>2.8.13</version>
+    <name>Jpom 插件端</name>
+    <properties>
+        <start-class>io.jpom.JpomAgentApplication</start-class>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>io.jpom</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <!--nginx-->
+        <dependency>
+            <groupId>com.github.odiszapc</groupId>
+            <artifactId>nginxparser</artifactId>
+            <version>0.9.6</version>
+        </dependency>
+        <!--  证书解密-->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.69</version>
+        </dependency>
 
-		<dependency>
-			<groupId>io.jpom.plugins</groupId>
-			<artifactId>webhook</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>io.jpom.plugins</groupId>
+            <artifactId>webhook</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>io.jpom.plugins</groupId>
-			<artifactId>auto-charset-jchardet</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.1.1</version>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>${start-class}</mainClass>
-							<!-- 是否指定项目classpath下的依赖 -->
-							<addClasspath>true</addClasspath>
-							<!-- 指定依赖的时候声明前缀 -->
-							<classpathPrefix>./</classpathPrefix>
-						</manifest>
-						<manifestEntries>
-							<!-- 项目版本号 -->
-							<Jpom-Project-Version>${project.version}</Jpom-Project-Version>
-							<!-- 打包时间 -->
-							<Jpom-Timestamp>${maven.build.timestamp}</Jpom-Timestamp>
-							<Jpom-Type>${project.artifactId}</Jpom-Type>
-							<Implementation-URL>https://gitee.com/dromara/Jpom</Implementation-URL>
-							<Jpom-Min-Version>${jpom-min-version}</Jpom-Min-Version>
-						</manifestEntries>
-					</archive>
-				</configuration>
-			</plugin>
-		</plugins>
-		<resources>
-			<!--版权文件,更新日志-->
-			<resource>
-				<filtering>false</filtering>
-				<directory>../../</directory>
-				<includes>
-					<include>CHANGELOG.md</include>
-					<include>LICENSE</include>
-				</includes>
-			</resource>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>false</filtering>
-			</resource>
-		</resources>
-	</build>
-	<profiles>
-		<profile>
-			<id>agent-default-profile</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-maven-plugin</artifactId>
-						<configuration>
-							<fork>true</fork>
-							<mainClass>${start-class}</mainClass>
-							<jvmArguments>-Dfile.encoding=UTF-8</jvmArguments>
-							<!--	<excludeGroupIds>io.jpom.plugins</excludeGroupIds>-->
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>repackage</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-assembly-plugin</artifactId>
-						<version>3.3.0</version>
-						<configuration>
-							<encoding>${project.build.sourceEncoding}</encoding>
-							<descriptors>
-								<descriptor>script/release.xml</descriptor>
-							</descriptors>
-							<outputDirectory>target</outputDirectory>
-						</configuration>
-						<executions>
-							<execution>
-								<id>make-assembly</id>
-								<phase>package</phase>
-								<goals>
-									<goal>single</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<!--  插件-->
-		<profile>
-			<id>install-plugin-profile</id>
-		</profile>
-		<profile>
-			<id>release-plugin-profile</id>
-		</profile>
-	</profiles>
+        <dependency>
+            <groupId>io.jpom.plugins</groupId>
+            <artifactId>auto-charset-jchardet</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.1</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>${start-class}</mainClass>
+                            <!-- 是否指定项目classpath下的依赖 -->
+                            <addClasspath>true</addClasspath>
+                            <!-- 指定依赖的时候声明前缀 -->
+                            <classpathPrefix>./</classpathPrefix>
+                        </manifest>
+                        <manifestEntries>
+                            <!-- 项目版本号 -->
+                            <Jpom-Project-Version>${project.version}</Jpom-Project-Version>
+                            <!-- 打包时间 -->
+                            <Jpom-Timestamp>${maven.build.timestamp}</Jpom-Timestamp>
+                            <Jpom-Type>${project.artifactId}</Jpom-Type>
+                            <Implementation-URL>https://gitee.com/dromara/Jpom</Implementation-URL>
+                            <Jpom-Min-Version>${jpom-min-version}</Jpom-Min-Version>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+        <resources>
+            <!--版权文件,更新日志-->
+            <resource>
+                <filtering>false</filtering>
+                <directory>../../</directory>
+                <includes>
+                    <include>CHANGELOG.md</include>
+                    <include>LICENSE</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+    </build>
+    <profiles>
+        <profile>
+            <id>agent-default-profile</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <fork>true</fork>
+                            <mainClass>${start-class}</mainClass>
+                            <jvmArguments>-Dfile.encoding=UTF-8</jvmArguments>
+                            <!--	<excludeGroupIds>io.jpom.plugins</excludeGroupIds>-->
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>repackage</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <version>3.3.0</version>
+                        <configuration>
+                            <encoding>${project.build.sourceEncoding}</encoding>
+                            <descriptors>
+                                <descriptor>script/release.xml</descriptor>
+                            </descriptors>
+                            <outputDirectory>target</outputDirectory>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>make-assembly</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <!-- 生成 sha1 校验文件 -->
+                    <plugin>
+                        <groupId>net.nicoulaj.maven.plugins</groupId>
+                        <artifactId>checksum-maven-plugin</artifactId>
+                        <version>1.11</version>
+                        <executions>
+                            <execution>
+                                <id>checksum-maven-plugin-files</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>files</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <fileSets>
+                                <fileSet>
+                                    <directory>${project.build.directory}</directory>
+                                    <includes>
+                                        <include>*.zip</include>
+                                        <include>*.tar.gz</include>
+                                    </includes>
+                                </fileSet>
+                            </fileSets>
+                            <algorithms>
+                                <algorithm>SHA-1</algorithm>
+                            </algorithms>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <!--  插件-->
+        <profile>
+            <id>install-plugin-profile</id>
+        </profile>
+        <profile>
+            <id>release-plugin-profile</id>
+        </profile>
+    </profiles>
 </project>
